<resources>
    <string name="default_title">UndefinedTitle</string>
    <string name="default_name">UndefinedName</string>
    <string name="default_contain">UndefinedContain</string>
    <string name="default_img">undefined</string>
    <string name="default_btn"></string>
    <string name="default_switch">UndefinedSwitch</string>

    <string name="app_name">dreamus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="setting_msg">Message Setting</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_concerned">Concern</string>
    <string name="menu_collection">Collection</string>
    <string name="menu_personal">Profile</string>
    <string name="menu_social">Social</string>
    <string name="menu_personalize">Personalize</string>
    <string name="menu_history">History</string>

    <string name="setting_cn">设置</string>
    <string name="setting_msg_cn">消息设置</string>
    <string name="menu_home_cn">主页</string>
    <string name="menu_collection_cn">收藏内容</string>
    <string name="menu_history_cn">历史记录</string>
    <string name="menu_personal_cn">个人中心</string>
    <string name="menu_social_cn">社交网络</string>"
    <string name="menu_personalize_cn">个性主题</string>
    <string name="social_concerned_cn">已关注</string>
    <string name="menu_share_cn">分享</string>
    <string name="menu_network">网络</string>

    <string name="setting_nav_basic">基础选项</string>
    <string name="setting_nav_advanced">高级选项</string>
    <string name="setting_nav_info">应用信息</string>
    <string name="setting_nav_legal">用户须知</string>
    <string name="setting_online">联网相关</string>
    <string name="setting_nav_log">登录设置</string>
    <string name="setting_nav_connect">联网选项</string>

    <string name="confirm">(๑*◡*๑)</string>
    <string name="cancel">(▼ヘ▼#)</string>

    <string name="theme_title">设置主题</string>

</resources>
