<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home"
            android:title="@string/menu_home_cn" />
        <item
            android:id="@+id/nav_collection"
            android:icon="@mipmap/ic_collection"
            android:title="@string/menu_collection_cn" />
        <item
            android:id="@+id/nav_history"
            android:icon="@mipmap/ic_history"
            android:title="@string/menu_history_cn" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/setting_cn" />
        <item
            android:id="@+id/nav_personalize"
            android:icon="@mipmap/ic_personalize"
            android:title="@string/menu_personalize_cn" />
    </group>

</menu>
